--- a/content/payments/umap/notifications/verify-signature.mdx
+++ b/content/payments/umap/notifications/verify-signature.mdx
@@ -13,9 +13,13 @@ This signature helps you to verify that the notifications were sent by Setu rath
 
 ### Generating the signature
 
-Setu generates a signature using the [Hash-based Message Authentication Code (HMAC)](https://en.wikipedia.org/wiki/HMAC). An HMAC is generated using a secret key in combination with a cryptographic hash function, [SHA256](https://en.wikipedia.org/wiki/SHA-2). This HMAC becomes the signature of the webhook, which is then used to authenticate the webhook and verify its payload.
+Setu generates a signature using the [Hash-based Message Authentication Code (HMAC)](https://en.wikipedia.org/wiki/HMAC). An HMAC is generated using a secret key in combination with a cryptographic hash function, [SHA256](https://en.wikipedia.org/wiki/SHA-2).
 
-Setu will create a unique secret key for your webhook endpoint and is shared between both the webhook producer (Setu) and consumer (you). This secret usually is a alpha-numeric string and its length can vary between 20 to 50 characters.
+This HMAC becomes the signature of the webhook, which is then used to authenticate the webhook and verify its payload.
+
+Setu will create a unique secret key for your webhook endpoint and is shared between both the webhook producer (Setu) and consumer (you).
+
+This secret usually is a alpha-numeric string and its length can vary between 20 to 50 characters. You can use [this webpage](https://www.gigacalculator.com/randomizers/random-alphanumeric-generator.php) to generate a unique secret.
 
 ### Verify the signature
 
