Update content - verify signature

--- a/content/payments/umap/notifications/verify-signature.mdx
+++ b/content/payments/umap/notifications/verify-signature.mdx
@@ -7,7 +7,7 @@ visible_in_sidebar: true
 
 ## Verify signature
 
-Setu will sign every notification sent to your webhook endpoint by generating a signature and sent in a custom header `x-setu-signature`.
+Setu will sign every notification sent to your webhook endpoint by generating a signature and sending it in a custom header `x-setu-signature`.
 
 This signature helps you to verify that the notifications were sent by Setu rather than a third party
 
